[package]
name = "tradebrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
sha2 = "0.9.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
tonic-build = "0.9.2"
tonic = "0.9.2"
prost = "0.11.9"
scylla = { version = "0.8.1" , features = ["ssl"]}
dockertest = "0.3.1"

[build-dependencies]
tonic-build = "0.9.2"
